twoheadedogre/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files\Java\jdk1.7.0_02\bin\javadoc.exe
-author
-version
-nodeprecated
-protected
-noindex
-notree
-nohelp
-nonavbar
-source
1.7
-classpath
I:\Program Files (x86)\Greenfoot\lib\extensions\greenfoot.jar;I:\Program Files (x86)\Greenfoot\lib\bluejcore.jar;I:\Program Files (x86)\Greenfoot\lib\bluejeditor.jar;I:\Program Files (x86)\Greenfoot\lib\bluejext.jar;I:\Program Files (x86)\Greenfoot\lib\AppleJavaExtensions.jar;I:\Program Files (x86)\Greenfoot\lib\junit-4.8.2.jar;I:\Program Files (x86)\Greenfoot\lib\bluej.jar;I:\Program Files (x86)\Greenfoot\lib\commons-httpclient-3.1.jar;I:\Program Files (x86)\Greenfoot\lib\commons-logging-api-1.1.1.jar;I:\Program Files (x86)\Greenfoot\lib\commons-codec-1.3.jar;I:\Program Files (x86)\Greenfoot\lib\jl1.0.1.jar;I:\Program Files (x86)\Greenfoot\lib\opencsv-2.3.jar;C:\Users\Geoff\Documents\GitHub\twoheadedogre\twoheadedogre
-d
C:\Users\Geoff\Documents\GitHub\twoheadedogre\twoheadedogre\doc
-encoding
UTF-8
-charset
UTF-8
-docletpath
I:\Program Files (x86)\Greenfoot\lib\bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
C:\Users\Geoff\Documents\GitHub\twoheadedogre\twoheadedogre\Ogre.java
<---- end of javadoc command ---->
Loading source file C:\Users\Geoff\Documents\GitHub\twoheadedogre\twoheadedogre\Ogre.java...
C:\Users\Geoff\Documents\GitHub\twoheadedogre\twoheadedogre\Ogre.java:15: error: ';' expected
    private boolean walking true;
                           ^
C:\Users\Geoff\Documents\GitHub\twoheadedogre\twoheadedogre\Ogre.java:21: error: '(' expected
        if 
          ^
C:\Users\Geoff\Documents\GitHub\twoheadedogre\twoheadedogre\Ogre.java:22: error: illegal start of expression
    }
    ^
C:\Users\Geoff\Documents\GitHub\twoheadedogre\twoheadedogre\Ogre.java:22: error: ')' expected
    }
     ^
C:\Users\Geoff\Documents\GitHub\twoheadedogre\twoheadedogre\Ogre.java:24: error: reached end of file while parsing
5 errors
